lexis-nexis/lexis-nexis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matchx-lexis-nexis
  namespace: deploy
spec:
  replicas: 1
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: matchx-lexis-nexis
  template:
    metadata:
      labels:
        app: matchx-lexis-nexis
      annotations:
        reloader.stakater.com/auto: "true"    
    spec:
      serviceAccountName: secrets-sa
      containers:
        - name: lexis-nexis
          image: 258219590636.dkr.ecr.eu-west-2.amazonaws.com/matchx-ln-replica:IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /up
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /up
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3          
          resources:
            requests:
              cpu: "150m"
              memory: "256Mi"
            limits:
              cpu: "300m"
              memory: "500Mi"          
---
apiVersion: v1
kind: Service
metadata:
  name: matchx-lexis-nexis-service
  namespace: deploy
spec:
  type: ClusterIP   
  selector:
    app: matchx-lexis-nexis
  ports:
    - port: 80
      targetPort: 3000
